[gd_scene load_steps=4 format=3 uid="uid://bcl4xjxfvdu8o"]

[ext_resource type="Script" path="res://GUI/npc_dialog_box.gd" id="1_oc23j"]
[ext_resource type="Texture2D" uid="uid://b437mv3xhrlvu" path="res://Assets/Art/Faces/partyface (1).png" id="1_u800s"]
[ext_resource type="Texture2D" uid="uid://ck5aopqrr8801" path="res://Assets/Art/Faces/partyface (2).png" id="2_0ec0u"]

[node name="DialogBox" type="HBoxContainer"]
process_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_oc23j")

[node name="NPCSpacer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="NPCPortrait" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="NPCTexture" type="TextureRect" parent="NPCPortrait"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_u800s")
expand_mode = 2

[node name="DialogContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="DialogContainer"]
layout_mode = 2

[node name="DialogText" type="RichTextLabel" parent="DialogContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerSpacer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="PlayerPortait" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="PlayerTexture" type="TextureRect" parent="PlayerPortait"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_0ec0u")
